--- a/pages/about.html
+++ b/pages/about.html
@@ -178,6 +178,36 @@
           </div>
         </div>
       </div>
+
+      <div class="company_card row justify-content-center mt-5 pt-lg-5">
+        <div class="bg_card col-lg-4 col-md-6">
+          <div class="card_content">
+            <i class="fa-brands fa-xing"></i>
+            <div class="card_text">
+              <h4>Perfect Design</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+        <div class="bg_card col-lg-4 col-md-6 mt-md-0 mt-4">
+          <div class="card_content">
+            <i class="fa-regular fa-thumbs-up"></i>
+            <div class="card_text">
+              <h4>Carefully Planed</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+        <div class="bg_card col-lg-4 col-md-6 mt-lg-0 mt-4">
+          <div class="card_content">
+            <i class="fa-brands fa-xing"></i>
+            <div class="card_text">
+              <h4>Smartly Execute</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
