--- a/pages/about.html
+++ b/pages/about.html
@@ -234,10 +234,10 @@
             </div>
           </div>
         </div>
-        <div class="img col-lg-3 align-self-center col-6 mt-lg-0 mt-md-5 mt-4 pe-md-3 pe-2">
+        <div class="img col-lg-3 align-self-center col-sm-6 col-12 mt-lg-0 mt-md-5 mt-4 pe-md-3 pe-2">
           <img class="img-fluid" src="./../img/ab.jpg" alt="">
         </div>
-        <div class="img col-lg-3 align-self-center col-6 mt-lg-0 mt-md-5 mt-4 pe-md-3 pe-2">
+        <div class="img col-lg-3 align-self-center col-sm-6 col-12 mt-lg-0 mt-md-5 mt-4 pe-md-3 pe-2">
           <img class="img-fluid" src="./../img/ab2.jpg" alt="">
         </div>
       </div>
