--- a/pages/about.html
+++ b/pages/about.html
@@ -262,11 +262,11 @@
       <div class="business_content position-relative">
         <div class="item_text mx-auto">
           <div class="title">
-          <h2>
-            We are the next generation of the business world, creative
-            solutions
-          </h2>
-        </div>
+            <h2>
+              We are the next generation of the business world, creative
+              solutions
+            </h2>
+          </div>
           <p class="mt-3">
             Lorem ipsum dolor sit amet consectetur adipisicing elit sunt in
             culpa qui officia sed deserunt mollit anim id est laborum mollit
@@ -289,6 +289,140 @@
       </div>
     </div>
   </section>
+
+  <!-- PROFESSIONALS -->
+  <section class="professionals text-center py-5">
+    <div class="container py-lg-5 py-md-4 py-2">
+      <div class="title mb-lg-5 mb-4">
+        <p>
+          OUR PROFESSIONALS
+        </p>
+        <h2>Meet the Team</h2>
+      </div>
+      <div class="item_bg row justify-content-center">
+        <div class="item col-lg-3 col-sm-6">
+          <div class="item_img">
+            <img class="img-fluid" src="./../img/team1.jpg" alt="">
+            <div class="overlay">
+                <div class="overlay_content">
+                  <p>Our web design team will spend time with our digital marketing team.</p>
+                  <div class="icon_social mt-4">
+                    <a href="https://www.facebook.com/w3layouts/">
+                      <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                    <a href="https://twitter.com/W3layouts">
+                      <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://google.com/W3layouts">
+                      <i class="fa-brands fa-google-plus-g"></i>
+                    </a>
+                    <a href="mailto:team1@mail.com">
+                      <i class="fa-solid fa-envelope"></i>
+                    </a>
+                  </div>
+              </div>
+            </div>
+          </div>
+          <a class="d-inline-block mt-4 text-decoration-none text-black" href="#">
+            <h6 class="team_title">Amelia Jessica</h6>
+          </a>
+          <p>Designer</p>
+        </div>
+        <div class="item col-lg-3 col-sm-6">
+          <div class="item_img">
+            <img class="img-fluid" src="./../img/team2.jpg" alt="">
+            <div class="overlay">
+              <div class="overlay_content">
+                <p>Our web design team will spend time with our digital marketing team.</p>
+                <div class="icon_social mt-4">
+                  <a href="https://www.facebook.com/w3layouts/">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="https://twitter.com/W3layouts">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                  <a href="https://google.com/W3layouts">
+                    <i class="fa-brands fa-google-plus-g"></i>
+                  </a>
+                  <a href="mailto:team1@mail.com">
+                    <i class="fa-solid fa-envelope"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <a class="d-inline-block mt-4 text-decoration-none text-black" href="#">
+            <h6 class="team_title"> Elizabeth Tracy</h6>
+          </a>
+          <p>Photographer</p>
+        </div>
+        <div class="item col-lg-3 col-sm-6">
+          <div class="item_img">
+            <img class="img-fluid" src="./../img/team3.jpg" alt="">
+            <div class="overlay">
+              <div class="overlay_content">
+                <p>Our web design team will spend time with our digital marketing team.</p>
+                <div class="icon_social mt-4">
+                  <a href="https://www.facebook.com/w3layouts/">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="https://twitter.com/W3layouts">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                  <a href="https://google.com/W3layouts">
+                    <i class="fa-brands fa-google-plus-g"></i>
+                  </a>
+                  <a href="mailto:team1@mail.com">
+                    <i class="fa-solid fa-envelope"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <a class="d-inline-block mt-4 text-decoration-none text-black" href="#">
+            <h6 class="team_title">Charlotte Ava</h6>
+          </a>
+          <p>Designer</p>
+        </div>
+        <div class="item col-lg-3 col-sm-6">
+          <div class="item_img">
+            <img class="img-fluid" src="./../img/team4.jpg" alt="">
+            <div class="overlay">
+              <div class="overlay_content">
+              <p>Our web design team will spend time with our digital marketing team.</p>
+              <div class="icon_social mt-4">
+                <a href="https://www.facebook.com/w3layouts/">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+                <a href="https://twitter.com/W3layouts">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="https://google.com/W3layouts">
+                  <i class="fa-brands fa-google-plus-g"></i>
+                </a>
+                <a href="mailto:team1@mail.com">
+                  <i class="fa-solid fa-envelope"></i>
+                </a>
+              </div>
+            </div>
+            </div>
+          </div>
+
+          <a class="d-inline-block mt-4 text-decoration-none text-black" href="#">
+            <h6 class="team_title">Emma Susan</h6>
+          </a>
+          <p>Designer</p>
+        </div>
+      </div>
+
+
+    </div>
+  </section>
+
+
+
 
   <footer>
     <!-- place footer here -->
