--- a/pages/about.html
+++ b/pages/about.html
@@ -304,22 +304,22 @@
           <div class="item_img">
             <img class="img-fluid" src="./../img/team1.jpg" alt="">
             <div class="overlay">
-                <div class="overlay_content">
-                  <p>Our web design team will spend time with our digital marketing team.</p>
-                  <div class="icon_social mt-4">
-                    <a href="https://www.facebook.com/w3layouts/">
-                      <i class="fa-brands fa-facebook-f"></i>
-                    </a>
-                    <a href="https://twitter.com/W3layouts">
-                      <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="https://google.com/W3layouts">
-                      <i class="fa-brands fa-google-plus-g"></i>
-                    </a>
-                    <a href="mailto:team1@mail.com">
-                      <i class="fa-solid fa-envelope"></i>
-                    </a>
-                  </div>
+              <div class="overlay_content">
+                <p>Our web design team will spend time with our digital marketing team.</p>
+                <div class="icon_social mt-4">
+                  <a href="https://www.facebook.com/w3layouts/">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="https://twitter.com/W3layouts">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                  <a href="https://google.com/W3layouts">
+                    <i class="fa-brands fa-google-plus-g"></i>
+                  </a>
+                  <a href="mailto:team1@mail.com">
+                    <i class="fa-solid fa-envelope"></i>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -391,22 +391,22 @@
             <img class="img-fluid" src="./../img/team4.jpg" alt="">
             <div class="overlay">
               <div class="overlay_content">
-              <p>Our web design team will spend time with our digital marketing team.</p>
-              <div class="icon_social mt-4">
-                <a href="https://www.facebook.com/w3layouts/">
-                  <i class="fa-brands fa-facebook-f"></i>
-                </a>
-                <a href="https://twitter.com/W3layouts">
-                  <i class="fa-brands fa-twitter"></i>
-                </a>
-                <a href="https://google.com/W3layouts">
-                  <i class="fa-brands fa-google-plus-g"></i>
-                </a>
-                <a href="mailto:team1@mail.com">
-                  <i class="fa-solid fa-envelope"></i>
-                </a>
+                <p>Our web design team will spend time with our digital marketing team.</p>
+                <div class="icon_social mt-4">
+                  <a href="https://www.facebook.com/w3layouts/">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="https://twitter.com/W3layouts">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                  <a href="https://google.com/W3layouts">
+                    <i class="fa-brands fa-google-plus-g"></i>
+                  </a>
+                  <a href="mailto:team1@mail.com">
+                    <i class="fa-solid fa-envelope"></i>
+                  </a>
+                </div>
               </div>
-            </div>
             </div>
           </div>
 
@@ -420,6 +420,97 @@
 
     </div>
   </section>
+
+  <!-- Choose -->
+  <section class="choose py-5 text-center">
+    <div class="container py-lg-5 py-md-4">
+      <div class="title">
+        <p>WHY CHOOSE US</p>
+        <h2 class="mx-lg-5">People choose us because we serve the best for everyone</h2>
+      </div>
+      <div class="choose_content row pt-lg-5 mt-4">
+        <div class="item_left col-lg-6">
+          <div class="choose_item_bg mb-sm-5 mb-4">
+            <div class="choose_container_item row">
+              <div class="choose_icon col-2">
+                <div class="icon_bg">
+                <i class="fa-solid fa-briefcase"></i>
+              </div>
+              </div>
+              <div class="choose_text col-10 text-start ps-md-5 ps-4">
+                <h3>Planning your business</h3>
+                <p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio adipisicing.</p>
+              </div>
+            </div>
+          </div>
+          <div class="choose_item_bg mb-sm-5 mb-4">
+            <div class="choose_container_item row">
+              <div class="choose_icon col-2">
+                <div class="icon_bg">
+                <i class="fa-solid fa-magnifying-glass-plus"></i>
+              </div>
+              </div>
+              <div class="choose_text col-10 text-start ps-md-5 ps-4">
+                <h3>Doing research for your clients</h3>
+                <p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio adipisicing.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item_right col-lg-6">
+          <div class="choose_item_bg mb-sm-5 mb-4">
+            <div class="choose_container_item row">
+              <div class="choose_icon col-2">
+                <div class="icon_bg">
+                <i class="fa-solid fa-gears"></i>
+              </div>
+              </div>
+              <div class="choose_text col-10 text-start ps-md-5 ps-4">
+                <h3>Create business process</h3>
+                <p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio adipisicing.</p>
+              </div>
+            </div>
+          </div>
+          <div class="choose_item_bg mb-sm-5 mb-4">
+            <div class="choose_container_item row">
+              <div class="choose_icon col-2">
+                <div class="icon_bg">
+                <i class="fa-solid fa-chart-area"></i>
+              </div>
+              </div>
+              <div class="choose_text col-10 text-start ps-md-5 ps-4">
+                <h3>We make the best strategies</h3>
+                <p>Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio adipisicing.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- Project -->
+<section class="project py-5">
+  <div class="container py-md-5 py-sm-4 py-2">
+    <div class="row align-items-center">
+    <div class="title col-lg-8">
+      <h2>Let's talk about your project and see how we can work together</h2>
+      <p class="mt-3 pe-md-4">
+        Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit amet. Lorem ipsum dolor sit amet elit.
+      </p>
+      
+    </div>
+    <div class="button col-lg-4 text-lg-end">
+      <a class="btn btn-success btn-style mt-lg-0 mt-md-5 mt-4">
+        Get started on a project
+        <i class="fa-solid fa-arrow-right ms-2"></i>
+      </a>
+    </div>
+  </div>
+  </div>
+</section>
+
+
 
 
 
