--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>About</title>
   <!-- Required meta tags -->
   <meta charset="utf-8" />
   <meta
@@ -186,7 +186,7 @@
       </div>
 
       <div class="company_card row justify-content-center mt-5 pt-lg-5">
-        <div class="bg_card col-lg-4 col-md-6">
+        <div class="bg_card col-lg-4 col-md-6 mt-md-0 mt-4">
           <div class="card_content">
             <i class="fa-brands fa-xing"></i>
             <div class="card_text">
