--- a/pages/service.html
+++ b/pages/service.html
@@ -130,7 +130,7 @@
     <!-- Check -->
     <section class="check py-5 text-center">
         <div class="container py-lg-5 py-md-4 py-2">
-            <div class="title mb-md-5 mb-4">
+            <div class="title title_container mb-md-5 mb-4">
                 <p>CHECK OUR SERVICES</p>
                 <h2 class="mx-lg-5">Introduce our best and reliable services for all your business</h2>
             </div>
@@ -140,7 +140,8 @@
                         <div class="check_item_container">
                             <img class="img-fluid mb-3" src="./../img/icon1.png" alt="">
                             <h3 class="mb-md-4 mb-4">Product Design</h3>
-                            <p class="mb-lg-2 mb-0">Aurabitur id gravida risus. Fusce eget ex , ultricies nisi ac sed, lacinia est. Quisque
+                            <p class="mb-lg-2 mb-0">Aurabitur id gravida risus. Fusce eget ex , ultricies nisi ac sed,
+                                lacinia est. Quisque
                                 ut lectus, eros et, sed risus. Nullam sit amet laoreet elit. non init magnaa velit,
                                 dolor eget ex.</p>
                             <div class="button">
@@ -160,7 +161,8 @@
                         <div class="check_item_container">
                             <img class="img-fluid mb-3" src="./../img/icon1.png" alt="">
                             <h3 class="mb-md-4 mb-4">Product Design</h3>
-                            <p class="mb-lg-2 mb-0">Aurabitur id gravida risus. Fusce eget ex , ultricies nisi ac sed, lacinia est. Quisque
+                            <p class="mb-lg-2 mb-0">Aurabitur id gravida risus. Fusce eget ex , ultricies nisi ac sed,
+                                lacinia est. Quisque
                                 ut lectus, eros et, sed risus. Nullam sit amet laoreet elit. non init magnaa velit,
                                 dolor eget ex.</p>
                             <div class="button">
@@ -168,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
@@ -176,14 +178,106 @@
 
     <!-- Industries -->
     <section class="industries py-5 text-center">
-        <div class="container">
-            <div class="title mb-md-5 mb-4">
+        <div class="container py-lg-5 py-md-4 py-2">
+            <div class="title title_container mb-md-5 mb-4">
                 <p>BEAUTIFULLY CRAFTED CREATIVE SOLUTIONS</p>
                 <h2>What industries we serve?</h2>
+            </div>
+
+            <div class="industries_item row justify-content-center">
+                <div class="industries_item_bg col-lg-4 col-md-6">
+                    <div class="item_box">
+                        <i class="fa-regular fa-money-bill-1"></i>
+                        <div class="item_box_text text-start">
+                            <h4>Commercial Projects</h4>
+                            <p>Amus a ligula quam tesque et ut justo, Duis sed dolor et amet.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="industries_item_bg col-lg-4 col-md-6 mt-md-0 mt-4">
+                    <div class="item_box">
+                        <i class="fa-regular fa-file-lines"></i>
+                        <div class="item_box_text text-start">
+                            <h4>Commercial Projects</h4>
+                            <p>Amus a ligula quam tesque et ut justo, Duis sed dolor et amet.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="industries_item_bg col-lg-4 col-md-6 mt-lg-0 mt-4">
+                    <div class="item_box">
+                        <i class="fa-regular fa-building"></i>
+                        <div class="item_box_text text-start">
+                            <h4>Banking & Finance</h4>
+                            <p>Amus a ligula quam tesque et ut justo, Duis sed dolor et amet.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="industries_item_bg col-lg-4 col-md-6 mt-4">
+                    <div class="item_box">
+                        <i class="fa-regular fa-clone"></i>
+                        <div class="item_box_text text-start">
+                            <h4>Competitive Research</h4>
+                            <p>Amus a ligula quam tesque et ut justo, Duis sed dolor et amet.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="industries_item_bg col-lg-4 col-md-6 mt-4">
+                    <div class="item_box">
+                        <i class="fa-solid fa-code"></i>
+                        <div class="item_box_text text-start">
+                            <h4>International Business</h4>
+                            <p>Amus a ligula quam tesque et ut justo, Duis sed dolor et amet.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="industries_item_bg col-lg-4 col-md-6 mt-4">
+                    <div class="item_box">
+                        <i class="fa-solid fa-chart-column"></i>
+                        <div class="item_box_text text-start">
+                            <h4>Strategic Approach</h4>
+                            <p>Amus a ligula quam tesque et ut justo, Duis sed dolor et amet.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
+    <!-- Register -->
+    <section class="register py-5">
+        <div class="container">
+            <div class="register_bg">
+                <div class="register_text">
+                    <div class="title">
+                        <p>INNOVATIVE TECHNOLOGY</p>
+                        <h2>We use latest technologies that are proven and practical</h2>
+                    </div>
+                    <div class="register_text mt-4">
+
+                    </div>
+                </div>
+
+                <div class="register_input">
+                    <div class="input_bg">
+                        <form action="">
+                            <h3>Lets talk about your project</h3>
+                            <p>We have made it easy for clients to reach us and get their solutions weaved</p>
+                            <div class="form_group">
+                                <input type="text" placeholder="Your Name*">
+                            </div>
+                            <div class="form_group">
+                                <input type="email" name="" id="" placeholder="Email*">
+                            </div>
+                            <div class="form_group">
+                                <textarea name="" placeholder="Message"></textarea>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <!-- place footer here -->
     </footer>
