--- a/pages/service.html
+++ b/pages/service.html
@@ -246,37 +246,108 @@
 
     <!-- Register -->
     <section class="register py-5">
-        <div class="container">
-            <div class="register_bg">
-                <div class="register_text">
+        <div class="container py-lg-5 py-md-4 py-2">
+            <div class="register_bg row align-items-center">
+                <div class="register_text col-lg-6 pe-lg-5 text-white">
                     <div class="title">
                         <p>INNOVATIVE TECHNOLOGY</p>
                         <h2>We use latest technologies that are proven and practical</h2>
                     </div>
-                    <div class="register_text mt-4">
+                    <div class="register_item_bg mt-4">
+                        <div class="register_item">
+                            <div class="register_icon">
+                                <i class="fa-solid fa-map"></i>
+                            </div>
+                            <div class="register_content">
+                                <h5>Our Location:</h5>
+                                <p>Corp Vision, 343 marketing, #21 cravel 1st lane street, NY - 62617.</p>
+                            </div>
+                        </div>
 
+                        <div class="register_item">
+                            <div class="register_icon">
+                                <i class="fa-solid fa-phone"></i>
+                            </div>
+                            <div class="register_content">
+                                <h5>Phone Numbers</h5>
+                                <p>+142 5897555, +142 5897566</p>
+                            </div>
+                        </div>
+                        <div class="register_item">
+                            <div class="register_icon">
+                                <i class="fa-regular fa-envelope"></i>
+                            </div>
+                            <div class="register_content">
+                                <h5>Email Addresses</h5>
+                                <p>mail@company1.com, mail@company2.com</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="register_input">
-                    <div class="input_bg">
+                <div class="register_input col-lg-6 mt-lg-0 mt-5">
+                    <div class="input_bg mx-auto">
                         <form action="">
                             <h3>Lets talk about your project</h3>
-                            <p>We have made it easy for clients to reach us and get their solutions weaved</p>
+                            <p class="mb-4">We have made it easy for clients to reach us and get their solutions weaved
+                            </p>
                             <div class="form_group">
                                 <input type="text" placeholder="Your Name*">
                             </div>
                             <div class="form_group">
-                                <input type="email" name="" id="" placeholder="Email*">
+                                <input type="email" name="" id="email" placeholder="Email*">
                             </div>
                             <div class="form_group">
                                 <textarea name="" placeholder="Message"></textarea>
+                            </div>
+                            <div class="button">
+                                <a class="btn btn-success btn-style">Get Started</a>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Solutions -->
+    <section class="solution py-5">
+        <div class="container py-lg-5 py-md-4 py-2">
+            <div class="title title_container text-center mb-md-5 md-4">
+                <p>BEAUTIFULLY CRAFTED CREATIVE SOLUTIONS</p>
+                <h2 class="mx-lg-5">Services that create identities, build brands, and get results</h2>
+            </div>
+            <div class="solution_item_content row justify-content-center align-items-center">
+                <div class="solution_item_bg col-lg-4 col-md-6">
+                    <div class="item_content">
+                        <div class="icon">
+                            <img class="img-fluid" src="./../img/icon1.png" alt="">
+                        </div>
+                        <h3 class="mb-3">Business Analysis</h3>
+                        <p>Venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit, dolor eget ex fermentum.</p>
+                    </div>
+                </div>
+                <div class="solution_item_bg col-lg-4 col-md-6 mt-md-0 mt-4">
+                    <div class="item_content">
+                        <div class="icon">
+                            <img class="img-fluid" src="./../img/icon2.png" alt="">
+                        </div>
+                        <h3 class="mb-3">Business Analysis</h3>
+                        <p>Venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit, dolor eget ex fermentum.</p>
+                    </div>
+                </div>
+                <div class="solution_item_bg col-lg-4 col-md-6 mt-lg-0 mt-4">
+                    <div class="item_content">
+                        <div class="icon">
+                            <img class="img-fluid" src="./../img/icon3.png" alt="">
+                        </div>
+                        <h3 class="mb-3">Business Analysis</h3>
+                        <p>Venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit, dolor eget ex fermentum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
     <footer>
         <!-- place footer here -->
