--- a/pages/service.html
+++ b/pages/service.html
@@ -332,7 +332,7 @@
                         <div class="icon">
                             <img class="img-fluid" src="./../img/icon2.png" alt="">
                         </div>
-                        <h3 class="mb-3">Business Analysis</h3>
+                        <h3 class="mb-3">Project Reporting</h3>
                         <p>Venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit, dolor eget ex fermentum.</p>
                     </div>
                 </div>
@@ -341,7 +341,7 @@
                         <div class="icon">
                             <img class="img-fluid" src="./../img/icon3.png" alt="">
                         </div>
-                        <h3 class="mb-3">Business Analysis</h3>
+                        <h3 class="mb-3">Security Enhanced</h3>
                         <p>Venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit, dolor eget ex fermentum.</p>
                     </div>
                 </div>
