--- a/error.html
+++ b/error.html
@@ -80,7 +80,7 @@
                       <div class="collapse navbar-collapse align-items-center" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto">
                           <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
