--- a/blog.html
+++ b/blog.html
@@ -80,13 +80,13 @@
                       <div class="collapse navbar-collapse align-items-center" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto">
                           <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="./pages/about.html">About</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="./pages/service.html">Services</a>
                           </li>
                           <li class="nav-item dropdown">
                             <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -100,7 +100,7 @@
                             </ul>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="./pages/contact.html">Contact</a>
                           </li>
                         </ul>
                         <!-- search -->
