--- a/blog.html
+++ b/blog.html
@@ -93,8 +93,8 @@
                               Pages
                             </a>
                             <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="#">blog posts</a></li>
-                              <li><a class="dropdown-item" href="#">404 page</a></li>
+                              <li><a class="dropdown-item" href="./blog.html">blog posts</a></li>
+                              <li><a class="dropdown-item" href="./error.html">404 page</a></li>
                               <li><a class="dropdown-item" href="#">landing page</a></li>
                               <li><a class="dropdown-item" href="#">elements page</a></li>
                             </ul>
