--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,8 +42,8 @@
           crossorigin="anonymous"
           referrerpolicy="no-referrer" />
 
-    <!-- CSS page service -->
-    <!-- <link rel="stylesheet" href="./../css/service.css" /> -->
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="./../css/style.css">
     <!-- CSS page contact -->
     <link rel="stylesheet" href="./../css/contact.css">
 </head>
@@ -54,67 +54,53 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg d-flex justify-content-between">
                 <div class="container-fluid">
-                    <h1>
-                        <a class="navbar-brand" href="#">
-                            <i class="fa-solid fa-align-right"></i>
-                            corp vision
-                            <span>vision to your future</span>
+                  <h1>
+                    <a class="navbar-brand" href="#">
+                        <i class="fa-solid fa-align-right"></i>
+                        corp vision
+                        <span>vision to your future</span>
+                    </a>
+                  </h1>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse align-items-center" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./../index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./about.html">About</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./service.html">Services</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Pages
                         </a>
-                    </h1>
-                    <button
-                            class="navbar-toggler"
-                            type="button"
-                            data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent"
-                            aria-controls="navbarSupportedContent"
-                            aria-expanded="false"
-                            aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div
-                         class="collapse navbar-collapse align-items-center"
-                         id="navbarSupportedContent">
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./../index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./about.html">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./service.html">Services</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a
-                                   class="nav-link dropdown-toggle"
-                                   href="#"
-                                   role="button"
-                                   data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    Pages
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">blog posts</a></li>
-                                    <li><a class="dropdown-item" href="#">404 page</a></li>
-                                    <li><a class="dropdown-item" href="#">landing page</a></li>
-                                    <li><a class="dropdown-item" href="#">elements page</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
-                            </li>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="./../blog.html">blog posts</a></li>
+                          <li><a class="dropdown-item" href="./../error.html">404 page</a></li>
+                          <li><a class="dropdown-item" href="#">landing page</a></li>
+                          <li><a class="dropdown-item" href="#">elements page</a></li>
                         </ul>
-                        <!-- search -->
-                        <div class="searchButton">
-                            <div class="searchItem">
-                                <div class="searchIcon bg-success">
-                                    <i class="fa-solid fa-magnifying-glass"></i>
-                                </div>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                      </li>
+                    </ul>
+                    <!-- search -->
+                    <div class="searchButton">
+                        <div class="searchItem">
+                            <div class="searchIcon bg-success">
+                                <i class="fa-solid fa-magnifying-glass"></i>
                             </div>
                         </div>
                     </div>
+                  </div>
                 </div>
-            </nav>
+              </nav>
         </div>
     </header>
     <!-- Banner -->
@@ -223,9 +209,60 @@
                 <a class="btn btn-success btn-style">Submit Now</a>
             </div>
     </section>
+   
+    
     <footer>
         <!-- place footer here -->
-    </footer>
+        <div class="container">
+            <div class="footerContent">
+                <div class="footerItem1">
+                    <h1>
+                        <a href="#">
+                            <i class="fa-solid fa-align-right"></i>
+                            corp vision
+                        </a>
+                        <p>Vision to your Future</p>
+                    </h1>
+                    <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet Semper at elit team advisors.</p>
+                    <div class="footerIcon">
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </div>
+                </div>
+                <div class="footerItem2">
+                    <h2>CONTACT INFO</h2>
+                    <ul>
+                        <li>Address : Corp Vision, 343 marketing, #21 cravel 1st lane street, NY - 62617.</li>
+                        <li>Phone Number : <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a></li>
+                        <li>Email: <a href="mailto:info@example.com">info@example.com</a></li>
+                        <li>Support: <a href="mailto:info@support.com">info@support.com</a></li>
+                    </ul>
+                </div>
+                <div class="footerItem3">
+                    <h2>CATEGORIES</h2>
+                    <ul>
+                        <li><a href="#">Marketing Strategy</a></li>
+                        <li><a href="#">Startup Business</a></li>
+                        <li><a href="#">Web Development</a></li>
+                    </ul>
+                </div>
+                <div class="footerItem3">
+                    <h2>META</h2>
+                    <ul>
+                        <li><a href="#">Log in</a></li>
+                        <li><a href="#">Entries feed</a></li>
+                        <li><a href="#">Comments feed</a></li>
+                        <li><a href="#">WordPress.org</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+      </footer>
+      <div class="copyRight">
+        <p>© 2023 Corp Vision All Rights Reserved | WordPress Theme by <span>W3Layouts.</span></p>
+      </div>
 
     <script
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
@@ -283,6 +320,54 @@
             });
         });
     </script>
+
+
+<!-- scroll add -->
+<script>
+    $(function() {
+  $(window).on("scroll", function() {
+  if($(window).scrollTop() > 50) {
+    $("header").addClass("activeScroll");
+  } else {
+    //remove the background property so it comes transparent again (defined in your css)
+   $("header").removeClass("activeScroll");
+  }
+  });
+  });
+  
+  </script>
+  <script>
+    $(function() {
+  $(window).on("scroll", function() {
+  if($(window).scrollTop() > 50) {
+    $(".navbar-brand").addClass("activeScrollText");
+  } else {
+    //remove the background property so it comes transparent again (defined in your css)
+   $(".navbar-brand").removeClass("activeScrollText");
+  }
+  });
+  });
+  
+  </script>
+  <script>
+    $(function() {
+  $(window).on("scroll", function() {
+  if($(window).scrollTop() > 50) {
+    $(".nav-link").addClass("activeScrollText2");
+  } else {
+    //remove the background property so it comes transparent again (defined in your css)
+   $(".nav-link").removeClass("activeScrollText2");
+  }
+  });
+  });
+  
+  </script>
+  
+  <!-- backtotop -->
+  <a href="#" class="cd-top text-replace js-cd-top backtotop"><i class="fa-solid fa-chevron-up"></i></a>
+  
+  <script src="./../back-to-top-master/assets/js/main.js"></script>
+  <script src="./../back-to-top-master/assets/js/util.js"></script>
 </body>
 
 </html>
