--- a/error.html
+++ b/error.html
@@ -83,24 +83,24 @@
                             <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="./pages/about.html">About</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="./pages/service.html">Services</a>
                           </li>
                           <li class="nav-item dropdown">
                             <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               Pages
                             </a>
                             <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="#">blog posts</a></li>
-                              <li><a class="dropdown-item" href="#">404 page</a></li>
+                              <li><a class="dropdown-item" href="./blog.html">blog posts</a></li>
+                              <li><a class="dropdown-item" href="./error.html">404 page</a></li>
                               <li><a class="dropdown-item" href="#">landing page</a></li>
                               <li><a class="dropdown-item" href="#">elements page</a></li>
                             </ul>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="./pages/contact.html">Contact</a>
                           </li>
                         </ul>
                         <!-- search -->
